[package]
name = "price-feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
tokio = { version = "1.14.1", features = ["macros"] }
reqwest = "0.11.12"
eyre = "0.6.8"
