[package]
name = "price-feed"
version = "0.1.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.2"
dotenv = "0.15"
eyre = "0.6.8"
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.10" }
ticketland-utils= { git = "https://github.com/ticketland-io/common-rust", version = "0.2.3" }
tokio = { version = "1.14.1", features = ["macros"] }
reqwest = "0.11.11"
